# challengeLC

./: ADDITIONAL_CHALLENGE.md  CHALLENGE.md  INSTALL.md  README.md
process_manager/: .dockerignore  CMakeLists.txt  Dockerfile  Doxyfile  conanfile.txt
process_manager/docs/html/: annotated.html  classCommandParser-members.html  classCommandParser.html  classDataMonitoring-members.html  classDataMonitoring.html  classLogger-members.html  classLogger.html  classProcessControl-members.html  classProcessControl.html  classProcessListing-members.html  classProcessListing.html  classProcessManager-members.html  classProcessManager.html  classResourceMonitoring-members.html  classResourceMonitoring.html  classThreadPool-members.html  classThreadPool.html  classes.html  command__parser_8h.html  command__parser_8h__incl.map  command__parser_8h__incl.md5  command__parser_8h_source.html  data__monitoring_8h.html  data__monitoring_8h__dep__incl.map  data__monitoring_8h__dep__incl.md5  data__monitoring_8h__incl.map  data__monitoring_8h__incl.md5  data__monitoring_8h_source.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  logger_8h.html  logger_8h__dep__incl.map  logger_8h__dep__incl.md5  (+28 more)
process_manager/docs/latex/: annotated.tex  classCommandParser.tex  classDataMonitoring.tex  classLogger.tex  classProcessControl.tex  classProcessListing.tex  classProcessManager.tex  classResourceMonitoring.tex  classThreadPool.tex  command__parser_8h.tex  command__parser_8h__incl.md5  command__parser_8h_source.tex  data__monitoring_8h.tex  data__monitoring_8h__dep__incl.md5  data__monitoring_8h__incl.md5  data__monitoring_8h_source.tex  files.tex  logger_8h.tex  logger_8h__dep__incl.md5  logger_8h__incl.md5  logger_8h_source.tex  process__control_8h.tex  refman.tex  (+16 more)
process_manager/include/: command_parser.h  data_monitoring.h  logger.h  process_control.h  process_listing.h  process_manager.h  resource_monitoring.h  thread_pool.h
process_manager/src/: command_parser.cpp  data_monitoring.cpp  logger.cpp  main.cpp  process_control.cpp  process_listing.cpp  process_manager.cpp  resource_monitoring.cpp  thread_pool.cpp
process_manager/tests/: resource_test.cpp
(+38 files in other folders)
